--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,86 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-body {
+/* Styling the configeditor */
+
+.config-editor {
+  display: inline-flex;
+  gap: 10px;
+  font-family: monospace;
+  line-height: 21px;
+  background: #282a3a;
+  border-radius: 2px;
+  padding: 20px 10px;
+  height: 600px;
+  overflow-y: auto;
+  width: 100%;
+}
+
+.config-editor .line-numbers {
+  width: 20px;
+  text-align: right;
+  height: 9999px;
+}
+
+.config-editor .line-numbers span {
+  counter-increment: linenumber;
+}
+
+.config-editor .line-numbers span::before {
+  content: counter(linenumber);
+  display: block;
+  color: #506882;
+}
+.config-editor textarea {
+  height: 9999px;
+  line-height: 21px;
+  overflow-y: hidden;
+  padding: 0;
+  border: 0;
+  background: #282a3a;
+  color: #fff;
+  outline: none;
+  resize: none;
+}
+
+/* Styling the scrollbar */
+body ::-webkit-scrollbar {
+  width: '8px';
+  height: '8px';
+}
+::-webkit-scrollbar-track {
+  border-radius: '5px';
+}
+::-webkit-scrollbar-thumb {
+  border-radius: '5px'
+}
+
+
+/* Styling the map */
+.geoview-map {
+  border: gray 1px solid;
+  width: calc(100%);
+  margin-bottom: 30px;
+  height: 800px;
+}
+
+
+/* Styling the lists */
+.unstyled-list ul {
+  list-style-type: none;
+}
+.unstyled-list li {
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
